compress the experiment into Main.ipynb

--- a/Codes/Experiment.ipynb
+++ b/Codes/Experiment.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "utils are imported! yeah!\n"
      ]
     }
    ],
@@ -25,13 +24,23 @@
     "from perform_utils import *\n",
     "from tqdm import tqdm\n",
     "\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('seaborn-white')\n",
     "# import numpy as np\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = '../Data/Different_Census/2018_10am_census'\n",
+    "df = pd.read_pickle(file + '.pkl')\n",
+    "df.to_csv(file + '.csv')"
    ]
   },
   {
@@ -99,7 +108,9 @@
    "source": [
     "# read data from file and calculate the census, adjust the census\n",
     "# census_file = \"../Data/2019-09-13Census and Surgical Admits and Scheduled 2.csv\"\n",
+    "# census_file = \"../Data/2020-01-10Census and Surgical Admits and Scheduled 2.csv\"\n",
     "census_file = \"../Data/2020-01-10Census and Surgical Admits and Scheduled 2.csv\"\n",
+    "\n",
     "\n",
     "# fyear = 2020\n",
     "# nogrowth = True\n",
